# python-project-49

./: .gitignore  README.md  pyproject.toml  setup.cfg
brain_games/: cli.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calculate.py  gcd.py  is_even.py  is_prime.py  progression.py  run_game.py
brain_games/scripts/: answer.py  ask_question.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_greet.py  brain_models.py  brain_prime.py  brain_progression.py  check_answer.py  congratulation.py  get_answer.py  greet.py
